# GarbageCollectorr

mark_sweep/: .gitignore
mark_sweep/include/: gc_interface.h
mark_sweep/mark_sweep/: CMakeLists.txt  README.md
mark_sweep/mark_sweep/include/: cascade_deletion_gc.h  heap_object.h  mark_sweep_gc.h  performance_test.h
mark_sweep/mark_sweep/scenarios/: CMakeCache.txt  cmake_install.cmake  scenario_basic.json  scenario_cascade.json  scenario_cycle.json  scenario_performance.json
mark_sweep/mark_sweep/src/: cascade_deletion_gc.cpp  perf_main.cpp  simulator.cpp
mark_sweep/python/: ms_animator.py  requirements.txt
mark_sweep/scenarios/: Makefile
mark_sweep/src/: mark_sweep_gc.cpp  performance_test.cpp
reference_counting/cpp/: compile.bat
reference_counting/cpp/include/: event_logger.h  rc_heap.h  rc_object.h  reference_counter.h  scenario_loader.h
reference_counting/cpp/src/: event_logger.cpp  main.cpp  rc_heap.cpp  reference_counter.cpp  scenario_loader.cpp  simulator.cpp
reference_counting/python/: app.py  log_parser.py  run.py  scenario_generator.py
reference_counting/python/static/: style.css  visualization.js
reference_counting/python/templates/: index.html
reference_counting/scenarios/: basic.json  cascade_delete.json  cycle_leak.json
